# controller_using_web_socket

./: .env  Cargo.toml  Dockerfile  README.md  ReadMe.txt.txt
src/: main.rs
static/css/: main.css  web_socket.css
templates/: controller.html  m_main.html
