[package]
name = "web_socket_farm"
version = "0.1.0"
authors = ["tonyl <tonylee3737@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
actix-web = "3.3.2"
tera = "1.5.0"
actix-files = "0.5.0"
serde = "1.0"
config = "0.10.1"
actix-web-actors = "3.0.0"
actix = "0.10.0"
dotenv = "0.15.0"
log = "0.4.0"
env_logger = "0.8.3"
sha256 = "1.0.2"
actix-http = "2.2.0"
actix-cors = "0.5.4"